# stat-site-framework

./: Cargo.toml
src/: generator.rs  lib.rs  markdown_utils.rs  render.rs
