[package]
name = "stat-site-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name =  "stat_site_framework"          # The name of the target.
path = "src/lib.rs"    # The source file of the target.
edition = "2021"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
pulldown-cmark = "0.11.0"
handlebars = "5.1.2"
yaml-front-matter = "0.1.0"
serde = "1.0.204"
serde_json = "1.0.120"
